--- a/index.html
+++ b/index.html
@@ -7,20 +7,80 @@
 	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans" />
 	<link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet" type="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Shrikhand&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Varela+Round&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1" user-scalable="no" />
 </head>
 <body>
-	<div id="envision" class="content-section">
-		<div id="title-box">
+    <!-- <div class="page">
+	 <div class="container">
+	 <div class="half-column"></div>
+	 <div class="half-column" id="noborder">
+	 <div class="half-row" id="thiccBorderBottom">
+	 <div class="half-row" id="smallRow">
+	 <h1>sponsors</h1>
+	 </div>
+	 <div class="half-row" id="thiccBorderTop"></div>
+	 </div>
+	 <div class="half-row" id="thiccBorderLeft">
+	 <div class="half-row" id="thiccMargin">
+	 <div class="box" id="noborder">
+	 <div class="dogImage"></div>
+	 </div>
+	 </div>
+	 </div>
+	 </div>
+	 </div>
+	 </div> -->
+    <div class="page">
+	<div class="container-plain">
+	    <div id="title-box" class="half-column-plain" >
+		<div id="title-left-upper" class="half-row" >
+		    <div id="title-text-box" >
 			<h1 id="title-text">envision</h1>
 			<h3 id="title-date-text">apr - 04</h3>
+		    </div>
 		</div>
-		<div id="link-box">
-			<div id="link-box-top"></div>
-			<div id="link-box-bottom"></div>
+		<div class="half-row-plain" >
+		    <h3 id="title-sub-title"> designathon</h3>
+		    <p class="title-sub-text" style="text-align: left;" >
+			Designathon is a one day design hackathon, with the goal of
+			fostering design thinking at UCLA. We aim to challenge
+			your scope of design knowledge, and introduce you to
+			the hard and soft skills involved in developing an
+			expertise in the field, all while getting the
+			chance to create something exciting that solves a
+			real world problem.
+			<br>
+			<br>
+			Applications will open in February!
+			<br>
+			<br>
+			Follow @bruinentrepreneurs on Facebook and
+			@bruin.entrepreneurs on Instagram for updates.
+		    </p>
 		</div>
+	    </div>
+	    <div class="half-column" >
+			<div class="section-title" >
+			    <h2 class="section-title-text" style="text-align: center;">things you can click</h2>
+			</div>
+			<div class="link-box" >
+			    <h2 class="section-title-text">about</h2>
+			    <p class="link-subtext">What's Designathon?</p>
+			    <h2 class="section-title-text">schedule</h2>
+			    <p class="link-subtext">What's Designathon?</p>
+			    <h2 class="section-title-text">sponsors</h2>
+			    <p class="link-subtext">What's Designathon?</p>
+			    <h2 class="section-title-text">last year</h2>
+			    <p class="link-subtext">What's Designathon?</p>
+			    <h2 class="section-title-text">faq</h2>
+			    <p class="link-subtext">What's Designathon?</p>
+			</div>
+	    </div>
 	</div>
+    </div>
 
 	<div id="schedule" class="content-section">
 		<h1 class="section-title"> schedule </h1>
@@ -118,6 +178,190 @@
 			</div>
 		</div>
 	</div>
+
+
+
+
+
+
+	<div class="page">
+		<div class="container-plain">
+			<div class="half-column" >
+				<div class="half-row" >
+					<div class="section-title" >
+				    	<h2 class="section-title-text" style="text-align: center;">schedule</h2>
+					</div>
+				</div>
+				<div class="half-row" >
+					<div class="half-column">	
+						<div>
+						    <h2 class="section-title-text-schedule">8:30 –</h2>
+						    <h2 class="section-title-text-schedule">9:00 –</h2>
+						    <h2 class="section-title-text-schedule">9:30 –</h2>
+						    <h2 class="section-title-text-schedule">10:00 –</h2>
+						    <h2 class="section-title-text-schedule">11:00 –</h2>
+						    <h2 class="section-title-text-schedule">12:00 –</h2>
+						    <h2 class="section-title-text-schedule">1:00 –</h2>
+						    <h2 class="section-title-text-schedule">1:30 –</h2>
+						    <h2 class="section-title-text-schedule">4:15 –</h2>
+						    <h2 class="section-title-text-schedule">5:00 –</h2>
+						</div>
+					</div>
+					<div class="half-column">	
+					</div>
+				</div>
+			</div>
+			<div class="half-column-plain" >
+				<div class="half-row-plain" >
+				</div>
+				<div class="half-row" >
+				</div>
+			</div>
+		</div>
+	</div>
+
+
+
+
+	<div class="page">
+		<div class="container-plain">
+				<!-- <div> -->
+			<div id="title-box" class="half-column-plain" >
+				<div class="half-row-plain" >
+					<div class="section-title">
+						    <h2 class="section-title-text-schedule-contents" style="text-align: middle;">schedule</h2>
+					</div>
+				</div>
+				<div class="half-row-plain" >
+					<div class="quarter-column-one" >
+						<div class="link-box" style="margin-top: 6vw;">
+						    <h2 class="section-title-text-schedule">8:30 –</h2>
+						    <h2 class="section-title-text-schedule">9:00 –</h2>
+						    <h2 class="section-title-text-schedule">9:30 –</h2>
+						    <h2 class="section-title-text-schedule">10:00 –</h2>
+						    <h2 class="section-title-text-schedule">11:00 –</h2>
+						    <h2 class="section-title-text-schedule">12:00 –</h2>
+						    <h2 class="section-title-text-schedule">1:00 –</h2>
+						    <h2 class="section-title-text-schedule">1:30 –</h2>
+						    <h2 class="section-title-text-schedule">4:15 –</h2>
+						    <h2 class="section-title-text-schedule">5:00 –</h2>
+						</div>
+				    </div>
+				    <div class="quarter-column-two" >
+						<div class="link-box-two" style="margin-top: 6vw;">
+						    <h2 class="section-title-text-schedule-contents">check in</h2>
+						    <h2 class="section-title-text-schedule-contents">opening remarks</h2>
+						    <h2 class="section-title-text-schedule-contents">activity</h2>
+						    <h2 class="section-title-text-schedule-contents">workshop 1</h2>
+						    <h2 class="section-title-text-schedule-contents">workshop 2</h2>
+						    <h2 class="section-title-text-schedule-contents">workshop 3</h2>
+						    <h2 class="section-title-text-schedule-contents">lunch</h2>
+						    <h2 class="section-title-text-schedule-contents">work time</h2>
+						    <h2 class="section-title-text-schedule-contents">industry panel</h2>
+						    <h2 class="section-title-text-schedule-contents">closing ceremony</h2>
+						</div>
+				    </div>
+				</div>
+			</div>
+				<!-- </div> -->
+
+
+		    <div id="title-box" class="half-column-plain" >
+				<div id="title-left-upper" class="half-row" >
+				    <div id="title-text-box" >
+					<h1 id="title-text">envision</h1>
+					<h3 id="title-date-text">apr - 04</h3>
+				    </div>
+				</div>
+				<div class="half-row-plain" >
+				    <h3 id="title-sub-title"> designathon</h3>
+				    <p class="title-sub-text" style="text-align: left;" >
+					Designathon is a one day design hackathon, with the goal of
+					fostering design thinking at UCLA. We aim to challenge
+					your scope of design knowledge, and introduce you to
+					the hard and soft skills involved in developing an
+					expertise in the field, all while getting the
+					chance to create something exciting that solves a
+					real world problem.
+					<br>
+					<br>
+					Applications will open in February!
+					<br>
+					<br>
+					Follow @bruinentrepreneurs on Facebook and
+					@bruin.entrepreneurs on Instagram for updates.
+				    </p>
+				</div>
+		    </div>
+		</div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+	<div class="page">
+      <div class="container">
+        <div class="half-column"></div>
+        <div class="half-column" id="noborder">
+          <div class="half-row" id="thiccBorderBottom">
+            <div class="half-row" id="smallRow">
+              <h1>sponsors</h1>
+            </div>
+            <div class="half-row" id="thiccBorderTop"></div>
+          </div>
+          <div class="half-row" id="thiccBorderLeft">
+            <div class="half-row" id="thiccMargin">
+                <div class="box" id="noborder">
+                  <div class="dogImage"></div>
+                </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 	</div>
 <script src="base.js"></script>
 <script src="faded.js"></script>
