Updated schedule section

--- a/index.html
+++ b/index.html
@@ -81,46 +81,46 @@
 
 <!-- schedule: Monica's section -->
 
-    <div class="page">
+    <div id="schedule" class="page">
       <div class="container-plain">
 		<div class="half-column" >
 			<div class="section-title" >
 		        <h2 class="section-title-text" style="margin-left: 4vw">schedule</h2>
 			</div>
-		    <div class="container-plain-schedule" style="max-width: 20rem">
+		    <div class="container-plain-schedule" >
 		    	<div id="envision-img-box">
 				  	<img id='envision-img' src='./assets/okaydude.png'>
 				</div>
 						<div class="half-column-schedule-small">
 							<div class="link-item-schedule">
-							 	<h2 class="link-title-text-time">8:30 –</h2>
+							 	<h2 class="link-title-text-time">8:30 – </h2>
 							</div>
 				            <div class="link-item-schedule">
-					        	<h2 class="link-title-text-time">9:00 –</h2>
+					        	<h2 class="link-title-text-time">9:00 – </h2>
 						    </div>
 					        <div class="link-item-schedule">
-						      	<h2 class="link-title-text-time">9:30 –</h2>
+						      	<h2 class="link-title-text-time">9:30 – </h2>
 							</div>
 						    <div class="link-item-schedule">
-							    <h2 class="link-title-text-time">10:00 –</h2>
+							    <h2 class="link-title-text-time">10:00 – </h2>
 							</div>
 							<div class="link-item-schedule">
-							    <h2 class="link-title-text-time">11:00 –</h2>
+							    <h2 class="link-title-text-time">11:00 – </h2>
 							</div>
 							<div class="link-item-schedule">
 							    <h2 class="link-title-text-time">12:00 –</h2>
 							</div>
 							<div class="link-item-schedule">
-							    <h2 class="link-title-text-time">1:00 –</h2>
+							    <h2 class="link-title-text-time">1:00 – </h2>
 							</div>
 							<div class="link-item-schedule">
-							    <h2 class="link-title-text-time">1:30 –</h2>
+							    <h2 class="link-title-text-time">1:30 – </h2>
 							</div>
 							<div class="link-item-schedule">
-							    <h2 class="link-title-text-time">4:15 –</h2>
+							    <h2 class="link-title-text-time">4:15 – </h2>
 							</div>
 							<div class="link-item-schedule">
-							    <h2 class="link-title-text-time">5:00 –</h2>
+							    <h2 class="link-title-text-time">5:00 – </h2>
 							</div>
 						</div>
 						<div class="half-column-schedule">
@@ -181,7 +181,7 @@
 
 
 
-    
+
 
 
     <div class="page">
