Added links for the @s on landing page

--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
 
     <div class="page">
       <div class="container-plain">
-	<div id="title-box" class="half-column-plain" >
-	    <div id="title-left-upper" class="half-row" >
-	          <div id="title-text-box" >
-		          <h1 id="title-text">envision</h1>
-			        <h3 id="title-date-text">apr - 05</h3>
-				    </div>
-		    </div>
-	      <div class="half-row-plain" >
-		    <h3 id="title-sub-title"> designathon</h3>
+	       <div id="title-box" class="half-column-plain" >
+	          <div id="title-left-upper" class="half-row" >
+	             <div id="title-text-box" >
+		               <h1 id="title-text">envision</h1>
+			             <h3 id="title-date-text">apr - 05</h3>
+				        </div>
+		        </div>
+	          <div class="half-row-plain" >
+		        <h3 id="title-sub-title"> designathon</h3>
 		        <p class="title-sub-text" style="text-align: left;" >
 			        Designathon is a one day design hackathon, with the goal of
 				      fostering design thinking at UCLA. We aim to challenge
@@ -44,45 +44,45 @@
 				      chance to create something exciting that solves a
 				      real world problem.
 				      <br>
-				            <br>
-					          Applications will open in February!
-					          <br>
-						        <br>
-							      Follow @bruinentrepreneurs on Facebook and
-							      @bruin.entrepreneurs on Instagram for updates.
-							    </p>
-			  </div>
-	      </div>
-	<div class="half-column" >
-	    <div class="section-title" >
-	          <h2 class="section-title-text" style="margin: auto auto;">things you can click</h2>
-		    </div>
-	      <div class="link-box" >
-		  <div id="foot-img-box">
-		  	<img id='foot-img' src='./assets/foot.png'>
-		  </div>
-		      <div class="link-item" >
-			  <a href="#title-sub-title"><h2 class="link-title-text">about</h2></a>
-			    <p class="link-subtext">What's Designathon?</p>
-			          </div>
-		            <div class="link-item">
-			        <a href="#schedule"><h2 class="link-title-text">schedule</h2></a>
-				  <p class="link-subtext">What's Designathon?</p>
+				      <br>
+					    Applications will open in February!
+					    <br>
+						  <br>
+							Follow <a href="https://www.facebook.com/BruinEntrepreneurs/">@bruinentrepreneurs</a> on Facebook and
+							<a href="https://instagram.com/bruin.entrepreneurs?igshid=1wswyhg9yny3d">@bruin.entrepreneurs</a> on Instagram for updates.
+						</p>
+			      </div>
+	         </div>
+	          <div class="half-column" >
+	             <div class="section-title" >
+	                <h2 class="section-title-text" style="margin: auto auto;">things you can click</h2>
+		            </div>
+               <div class="link-box" >
+	                <div id="foot-img-box">
+	  	                <img id='foot-img' src='./assets/foot.png'>
+	                </div>
+	                 <div class="link-item" >
+		                  <a href="#title-sub-title"><h2 class="link-title-text">about</h2></a>
+		                  <p class="link-subtext">What's Designathon?</p>
+		                </div>
+	                  <div class="link-item">
+		                  <a href="#schedule"><h2 class="link-title-text">schedule</h2></a>
+			                <p class="link-subtext">What's Designathon?</p>
+			              </div>
+		                <div class="link-item">
+			                <a href="#sponsors"><h2 class="link-title-text">sponsors</h2></a>
+			                <p class="link-subtext">What's Designathon?</p>
+				            </div>
+			              <div class="link-item">
+				              <a href='#last-year'><h2 class="link-title-text">last year</h2></a>
+				              <p class="link-subtext">What's Designathon?</p>
+				            </div>
+				            <div class="link-item">
+					            <a href='#faq'><h2 class="link-title-text">faq</h2></a>
+					            <p class="link-subtext">What's Designathon?</p>
+					          </div>
 				        </div>
-			          <div class="link-item">
-				      <a href="#sponsors"><h2 class="link-title-text">sponsors</h2></a>
-				        <p class="link-subtext">What's Designathon?</p>
-					      </div>
-				        <div class="link-item">
-					    <a href='#last-year'><h2 class="link-title-text">last year</h2></a>
-					      <p class="link-subtext">What's Designathon?</p>
-					            </div>
-					      <div class="link-item">
-						  <a href='#faq'><h2 class="link-title-text">faq</h2></a>
-						    <p class="link-subtext">What's Designathon?</p>
-						          </div>
-					        </div>
-	      </div>
+	          </div>
       </div>
     </div>
 
@@ -231,7 +231,7 @@
     <div class="container-plain">
           <div class="half-column" style="height: 50%; border-right: 0;">
 	          <div class="section-title" style="height: 30%;" >
-		    <h1 class="section-title-text">last year</h1>
+		            <h1 class="section-title-text">last year</h1>
 		          </div>
 		        <div class="half-row-plain">
 			  <p id='last-year-text'>
