fixed dashes in schedule

--- a/index.html
+++ b/index.html
@@ -103,34 +103,34 @@
 				</div>
 						<div class="half-column-schedule-small">
 							<div class="link-item-schedule">
-							 	<h2 class="link-title-text-time">8:30 – </h2>
+							 	<h2 class="link-title-text-time">8:30 &#8211;</h2>
 							</div>
 				            <div class="link-item-schedule">
-					        	<h2 class="link-title-text-time">9:00 – </h2>
+					        	<h2 class="link-title-text-time">9:00 &#8211;</h2>
 						    </div>
 					        <div class="link-item-schedule">
-						      	<h2 class="link-title-text-time">9:30 – </h2>
+						      	<h2 class="link-title-text-time">9:30 &#8211;</h2>
 							</div>
 						    <div class="link-item-schedule">
-							    <h2 class="link-title-text-time">10:00 – </h2>
+							    <h2 class="link-title-text-time">10:00 &#8211;</h2>
 							</div>
 							<div class="link-item-schedule">
-							    <h2 class="link-title-text-time">11:00 – </h2>
+							    <h2 class="link-title-text-time">11:00 &#8211;</h2>
 							</div>
 							<div class="link-item-schedule">
-							    <h2 class="link-title-text-time">12:00 –</h2>
+							    <h2 class="link-title-text-time">12:00 &#8211;</h2>
 							</div>
 							<div class="link-item-schedule">
-							    <h2 class="link-title-text-time">1:00 – </h2>
+							    <h2 class="link-title-text-time">1:00 &#8211;</h2>
 							</div>
 							<div class="link-item-schedule">
-							    <h2 class="link-title-text-time">1:30 – </h2>
+							    <h2 class="link-title-text-time">1:30 &#8211;</h2>
 							</div>
 							<div class="link-item-schedule">
-							    <h2 class="link-title-text-time">4:15 – </h2>
+							    <h2 class="link-title-text-time">4:15 &#8211;</h2>
 							</div>
 							<div class="link-item-schedule">
-							    <h2 class="link-title-text-time">5:00 – </h2>
+							    <h2 class="link-title-text-time">5:00 &#8211;</h2>
 							</div>
 						</div>
 						<div class="half-column-schedule">
