Pictures in Sponsors section scale without loss

--- a/index.html
+++ b/index.html
@@ -182,7 +182,13 @@
 
     <div class="page" id="sponsors">
       <div class="container-plain">
-			<div class="half-column"></div>
+			<div class="half-column">
+        <div class="ear-box" >
+           <div id="ear-img-box">
+               <img id='foot-img' src='./assets/ear.png'>
+          </div>
+        </div>
+      </div>
 			<div class="half-column noborder">
 				<div class="half-row" id="thiccBorderBottom">
           <div class="section-title" style="height: 30%;" >
@@ -202,15 +208,24 @@
 				</div>
 				<div class="half-row" id="thiccBorderLeft">
 					<div class="half-row" id="thiccMargin">
+            <!--
 						<div class="greenBox noborder" >
 							<div id="dogImage"></div>
 						</div>
+          -->
+            <div class="dog-box" >
+               <div id="dog-img-box">
+                   <img id='foot-img' src='./assets/dog.png'>
+              </div>
+            </div>
 					</div>
 				</div>
 			</div>
 		</div>
+    <!--
 		<div class="blueBox"></div>
 		<div class="earImage"></div>
+  -->
 	</div>
 </div>
 
