Fixed more of Nat's changes

--- a/index.html
+++ b/index.html
@@ -99,34 +99,34 @@
 				</div>
 				<div class="half-column-schedule-small">
 					<div class="link-item-schedule">
-						<h2 class="link-title-text-time">8:30 – </h2>
+						<h2 class="link-title-text-time">8:30 &ndash;</h2>
 					</div>
 					<div class="link-item-schedule">
-						<h2 class="link-title-text-time">9:00 – </h2>
+						<h2 class="link-title-text-time">9:00 &ndash;</h2>
 					</div>
 					<div class="link-item-schedule">
-						<h2 class="link-title-text-time">9:30 – </h2>
+						<h2 class="link-title-text-time">9:30 &ndash;</h2>
 					</div>
 					<div class="link-item-schedule">
-						<h2 class="link-title-text-time">10:00 – </h2>
+						<h2 class="link-title-text-time">10:00 &ndash;</h2>
 					</div>
 					<div class="link-item-schedule">
-						<h2 class="link-title-text-time">11:00 – </h2>
+						<h2 class="link-title-text-time">11:00 &ndash;</h2>
 					</div>
 					<div class="link-item-schedule">
-						<h2 class="link-title-text-time">12:00 –</h2>
+						<h2 class="link-title-text-time">12:00 &ndash;</h2>
 					</div>
 					<div class="link-item-schedule">
-						<h2 class="link-title-text-time">1:00 – </h2>
+						<h2 class="link-title-text-time">1:00 &ndash;</h2>
 					</div>
 					<div class="link-item-schedule">
-						<h2 class="link-title-text-time">1:30 – </h2>
+						<h2 class="link-title-text-time">1:30 &ndash;</h2>
 					</div>
 					<div class="link-item-schedule">
-						<h2 class="link-title-text-time">4:15 – </h2>
+						<h2 class="link-title-text-time">4:15 &ndash;</h2>
 					</div>
 					<div class="link-item-schedule">
-						<h2 class="link-title-text-time">5:00 – </h2>
+						<h2 class="link-title-text-time">5:00 &ndash;</h2>
 					</div>
 				</div>
 				<div class="half-column-schedule">
@@ -362,8 +362,8 @@
       <img id='be-logo-img' src='./assets/bigblue.png'>
     </div>
     <div id="bottom-links">
-      <a href="https://www.facebook.com/BruinEntrepreneurs/"><p class="bottom-links-text">FB</p></a>
-      <a href="https://instagram.com/bruin.entrepreneurs"><p class="bottom-links-text">IG</p></a>
+      <a href="https://www.facebook.com/BruinEntrepreneurs/"><p class="bottom-links-text">Facebook</p></a>
+      <a href="https://instagram.com/bruin.entrepreneurs"><p class="bottom-links-text">Instagram</p></a>
       <a href='mailto:finance@bruinentrepreneurs.org'><p class="bottom-links-text">Email</p></a>
     </div>
   </div>
