Revert color of application link

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				      real world problem.
 				      <br>
 				      <br>
-					    <a href='http://tinyurl.com/BEdesignathon20' style='color: #84A9B2; '>Apply by March 15th!</a>
+					    <a href='http://tinyurl.com/BEdesignathon20' style='color: #A21B5B; '>Apply by March 15th!</a>
 					    <br>
 						  <br>
 							Follow Bruin Entrepreneurs on <a href="https://www.facebook.com/BruinEntrepreneurs/" style="color: #A21B5B;">Facebook</a> and on
