Added code for sponsors image

--- a/index.html
+++ b/index.html
@@ -183,6 +183,11 @@
     <div class="page" id="sponsors">
       <div class="container-plain">
 			<div class="half-column">
+        <div class="sponsor-box">
+          <div id="sponsor-img-box">
+            <img id='foot-img' src='./assets/500designs_export_lockup_black-1.png'>
+          </div>
+        </div>
         <div class="ear-box" >
            <div id="ear-img-box">
                <img id='foot-img' src='./assets/ear.png'>
