--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     <div class="page" id="sponsors">
       <div class="container-plain">
 			<div class="half-column">
-        <div class="ear-box" >
+        <div class="ear-box">
            <div id="ear-img-box">
                <img id='foot-img' src='./assets/ear.png'>
           </div>
@@ -228,6 +228,75 @@
   -->
 	</div>
 </div>
+
+<!-- sponsors section -->
+
+<div class="page">
+  <div id='sponsors' class="container-sponsors" >
+	<div class="section-title" >
+	      <h1 class="section-title-text" >sponsors & speakers & mentors & judges</h1>
+	      </div>
+	<div class="half-column-plain" >
+	      <div class="s-box" style="background-color: #8FBEC7;"></div>
+	      <h3 class="s-box-description">Natasha Puthukudy</h3>
+	      <h3 class="s-box-description" style="margin-top: -6%; font-size: 1vw;">Company</h3>
+	      <h3 class="s-box-description" style="margin-top: -6%; font-size: 1vw;">Role</h3>
+	      <div class="s-box" style="background-color: #B8DA85;"></div>
+	      <h3 class="s-box-description">Riley Noon</h3>
+	      <h3 class="s-box-description" style="margin-top: -6%; font-size: 1vw;">Company</h3>
+	      <h3 class="s-box-description" style="margin-top: -6%; font-size: 1vw;">Role</h3>
+	      <div class="s-box" style="background-color: #AC0462;"></div>
+	      <h3 class="s-box-description">Karlina Ho</h3>
+	      <h3 class="s-box-description" style="margin-top: -6%; font-size: 1vw;">Company</h3>
+	      <h3 class="s-box-description" style="margin-top: -6%; font-size: 1vw;">Role</h3>
+	</div>
+	<div class="half-column-plain" >
+	      <div class="s-box" style="background-color: #AC0462;"></div>
+	      <h3 class="s-box-description">Franklin Liang</h3>
+	      <h3 class="s-box-description" style="margin-top: -6%; font-size: 1vw;">Company</h3>
+	      <h3 class="s-box-description" style="margin-top: -6%; font-size: 1vw;">Role</h3>
+	      <div class="s-box" style="background-color: #8FBEC7;"></div>
+	      <h3 class="s-box-description">Crystal Huynh</h3>
+	      <h3 class="s-box-description" style="margin-top: -6%; font-size: 1vw;">Company</h3>
+	      <h3 class="s-box-description" style="margin-top: -6%; font-size: 1vw;">Role</h3>
+	      <div class="s-box" style="background-color: #DCC5A5;"></div>
+	      <h3 class="s-box-description">Monica Bellare</h3>
+	      <h3 class="s-box-description" style="margin-top: -6%; font-size: 1vw;">Company</h3>
+	      <h3 class="s-box-description" style="margin-top: -6%; font-size: 1vw;">Role</h3>
+	</div>
+	<div class="half-column-plain" >
+	      <div class="s-box" style="background-color: #DCC5A5;"></div>
+	      <h3 class="s-box-description">Isha Kamath</h3>
+	      <h3 class="s-box-description" style="margin-top: -6%; font-size: 1vw;">Company</h3>
+	      <h3 class="s-box-description" style="margin-top: -6%; font-size: 1vw;">Role</h3>
+	      <div class="s-box" style="background-color: #1A1943;"></div>
+	      <h3 class="s-box-description">Sela Serafin</h3>
+	      <h3 class="s-box-description" style="margin-top: -6%; font-size: 1vw;">Company</h3>
+	      <h3 class="s-box-description" style="margin-top: -6%; font-size: 1vw;">Role</h3>
+	      <div class="s-box" style="background-color: #B8DA85;"></div>
+	      <h3 class="s-box-description">Paolo Shamoon</h3>
+	      <h3 class="s-box-description" style="margin-top: -6%; font-size: 1vw;">Company</h3>
+	      <h3 class="s-box-description" style="margin-top: -6%; font-size: 1vw;">Role</h3>
+	</div>
+	<div class="half-column-plain" >
+	      <div class="s-box" style="background-color: #1A1943;"></div>
+	      <h3 class="s-box-description">Sarah Wilen</h3>
+	      <h3 class="s-box-description" style="margin-top: -6%; font-size: 1vw;">Company</h3>
+	      <h3 class="s-box-description" style="margin-top: -6%; font-size: 1vw;">Role</h3>
+	      <div class="s-box" style="background-color: #AC0462;;"></div>
+	      <h3 class="s-box-description">Nicole Park</h3>
+	      <h3 class="s-box-description" style="margin-top: -6%; font-size: 1vw;">Company</h3>
+	      <h3 class="s-box-description" style="margin-top: -6%; font-size: 1vw;">Role</h3>
+	      <div class="s-box" style="background-color: #8FBEC7;"></div>
+	      <h3 class="s-box-description">Joey Tang</h3>
+	      <h3 class="s-box-description" style="margin-top: -6%; font-size: 1vw;">Company</h3>
+	      <h3 class="s-box-description" style="margin-top: -6%; font-size: 1vw;">Role</h3>
+	</div>
+
+   </div>
+</div>
+
+<!-- sponsors section -->
 
 <div id='last-year' class="page">
     <div class="container-plain">
