Commented sponsor section

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 	</div>
 </div>
 
-<!-- sponsors section -->
+<!-- sponsors section
 
 <div class="page">
   <div id='sponsors' class="container-sponsors" >
@@ -301,7 +301,7 @@
    </div>
 </div>
 
-<!-- sponsors section -->
+ -->
 
 <div id='last-year' class="page">
     <div class="container-plain">
