Switched signing up date and event date for 1st page

--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
 	          <div id="title-left-upper" class="half-row" >
 	             <div id="title-text-box" >
 		               <h1 id="title-text">envision</h1>
-			             <h3 id="title-date-text">apr - 05</h3>
+			             <h5><a href='http://tinyurl.com/BEdesignathon20' style='color: #A21B5B; '>Apply by March 15th!</a></h5>
 				        </div>
 		        </div>
 	          <div class='squeezed' class="half-row-plain" >
 		        <h3 id="title-sub-title"> designathon</h3>
+            <h3 id="title-sub-title"> april 5</h3>
 		        <p class="title-sub-text" style="text-align: left;" >
 			        Designathon is a one day design hackathon, with the goal of
 				      fostering design thinking at UCLA. We aim to challenge
@@ -43,9 +44,7 @@
 				      expertise in the field, all while getting the
 				      chance to create something exciting that solves a
 				      real world problem.
-				      <br>
-				      <br>
-					    <a href='http://tinyurl.com/BEdesignathon20' style='color: #A21B5B; '>Apply by March 15th!</a>
+					    <!-- <a href='http://tinyurl.com/BEdesignathon20' style='color: #A21B5B; '>Apply by March 15th!</a> -->
 					    <br>
 						  <br>
 							Follow Bruin Entrepreneurs on <a href="https://www.facebook.com/BruinEntrepreneurs/" style="color: #A21B5B;">Facebook</a> and on
@@ -329,7 +328,7 @@
 		</div>
 	    <div class="half-column" style="width: 50%;">
 		    <div id="last-year-pic-box">
-				<img id='whiteboard-pic' src='./assets/fullsizeoutput_17e4.jpeg'>
+				    <img id='whiteboard-pic' src='./assets/fullsizeoutput_17e4.jpeg'>
 				<!-- <div style='display: flex; justify-content: center;'>
 					<div style='font-weight: 900; font-size: 1.vw;'>&mdash;&nbsp;&nbsp;&nbsp;&nbsp;</div>
 					<div style='font-weight: 700; font-size: 1.vw;'>&mdash;&nbsp;&nbsp;&nbsp;&nbsp;</div>
