Reverted to old website

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/css?family=Varela+Round&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
 
+
   <meta name="viewport" content="width=device-width, initial-scale=1" user-scalable="no" />
 </head>
 <body>
@@ -30,12 +31,11 @@
 	          <div id="title-left-upper" class="half-row" >
 	             <div id="title-text-box" >
 		               <h1 id="title-text">envision</h1>
-			             <h5><a href='http://tinyurl.com/BEdesignathon20' style='color: #A21B5B; '>Apply by March 15th!</a></h5>
+			             <h5><a href='http://tinyurl.com/BEdesignathon20' style='color: #151041; '><span style="color: #A21B5B">Apply</span> by March 15th!</a></h5>
 				        </div>
 		        </div>
 	          <div class='squeezed' class="half-row-plain" >
-		        <h3 id="title-sub-title"> designathon</h3>
-            <h3 id="title-sub-title"> april 5</h3>
+		        <h3 id="title-sub-title"> designathon &nbsp;&nbsp;apr 5</h3>
 		        <p class="title-sub-text" style="text-align: left;" >
 			        Designathon is a one day design hackathon, with the goal of
 				      fostering design thinking at UCLA. We aim to challenge
