Fix mobile somewhat

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 			<div class="half-column">
         <div class="sponsor-box">
           <div id="sponsor-img-box">
-            <img id='foot-img' src='./assets/500Designs_Export_Lockup_Black.png'>
+            <img id='fivehun-img' src='./assets/500Designs_Export_Lockup_Black.png'>
           </div>
         </div>
         <div class="ear-box" >
@@ -213,7 +213,7 @@
           -->
             <div class="dog-box" >
                <div id="dog-img-box">
-                   <img id='foot-img' src='./assets/dog.png'>
+                   <img id='dog-img' src='./assets/dog.png'>
               </div>
             </div>
 					</div>
